--- a/src/plugins/i18n/locales/en.json
+++ b/src/plugins/i18n/locales/en.json
@@ -22,7 +22,7 @@
     "links": "Links"
   },
   "pages": {
-    "title": "Ping Dashboard",
+    "title": "Cross Finance",
     "title_all": "404",
     "tag": "Beta",
     "tag_all": "Page Not Found",
